<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_form"
            android:icon="@drawable/ic_form"
            android:title="@string/menu_form" />
        <item
            android:id="@+id/nav_medicine"
            android:icon="@drawable/ic_medicine"
            android:title="@string/menu_medicine" />
        <item
            android:id="@+id/nav_emergency_call"
            android:icon="@drawable/ic_emergency"
            android:title="@string/menu_emergency" />
        <item
            android:id="@+id/nav_relatory"
            android:icon="@drawable/ic_relatory"
            android:title="@string/menu_relatory" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
    </group>
</menu>