<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.marcowilly.jamedicou.view.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_medicine"
        android:name="com.marcowilly.jamedicou.view.fragment.medicine.MedicineFragment"
        android:label="@string/menu_medicine"
        tools:layout="@layout/fragment_medicine" />

    <fragment
        android:id="@+id/nav_form"
        android:name="com.marcowilly.jamedicou.view.fragment.form.FormFragment"
        android:label="@string/menu_form"
        tools:layout="@layout/fragment_form" />

    <fragment
        android:id="@+id/nav_emergency"
        android:name="com.marcowilly.jamedicou.view.fragment.emergency.EmergencyFragment"
        android:label="@string/menu_emergency"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.marcowilly.jamedicou.view.fragment.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_relatory"
        android:name="com.marcowilly.jamedicou.view.fragment.relatory.RelatoryFragment"
        android:label="@string/menu_relatory"
        tools:layout="@layout/fragment_relatory" />
</navigation>